quorum/test/tests/templating/Fail/C_9.quorum
class C<Type> is A<Type>

end